--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "java.configuration.updateBuildConfiguration": "interactive",
     "cSpell.words": [
       "okjl"
-    ]
+    ],
+    "cmake.sourceDirectory": "/Users/okji/self/flutter/lib/cameras/example/linux"
   }
