--- a/example/macos/Runner/Configs/AppInfo.xcconfig
+++ b/example/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = cameras_example
+PRODUCT_NAME = a_cameras_example
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.okjl.camerasExample
+PRODUCT_BUNDLE_IDENTIFIER = com.okjl.a_camerasExample
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
