--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="cameras_example"
+        android:label="a_cameras_example"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
