--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: a_cameras
 description: A Flutter plugin for accessing camera functionalities across various platforms with a unified API. Currently supports web only.
-version: 0.0.3
+version: 0.0.7
 homepage: https://github.com/Okladnoj/cameras
 repository: https://github.com/Okladnoj/cameras
 
@@ -18,6 +18,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.3.0
   universal_html: ^2.2.4
+  logger: ^2.0.2
 
 dev_dependencies:
   flutter_test:
